// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonLoader renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="row css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-uhwxm5"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 10`] = `
<div
  className="css-1xdhyk6"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 11`] = `
<div
  className="css-kle7zy"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 12`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-1twknw3"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-tz3wol"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1akrz52"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-qaeww3"
      >
        <div
          className="css-0"
          style={
            Object {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
